--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 .container {
     height: 100vh;
-    background-color: #2f2f2f;
+    background-color: #1e1d1f;
     display: grid;
     place-items: center;
 }
